@@ -1,3 +1,8 @@
+Wed Mar  8 01:24:22 MST 2006  David Trowbridge <trowbrds@gmail.com>
+
+	* src/fe-gnome/userlist-gui.c:
+	  - Make the userlist popup xinerama-happy
+
 Wed Mar  8 00:47:54 MST 2006  David Trowbridge <trowbrds@gmail.com>
 
 	* plugins/autoaway/xscreensaver.c:
